<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ChatActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/message_hint"
            android:textSize="20sp"
            android:id="@+id/msgEdt"
            android:inputType="textMultiLine|textShortMessage"
            android:imeOptions="actionSend" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_button_text"
            android:id="@+id/emojiBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            android:id="@+id/sendBtn" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@android:color/white"
            android:scrollbars="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/emojiPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_1"
            android:onClick="onEmojiSelected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_2"
            android:onClick="onEmojiSelected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_3"
            android:onClick="onEmojiSelected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_4"
            android:onClick="onEmojiSelected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_5"
            android:onClick="onEmojiSelected" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_6"
            android:onClick="onEmojiSelected" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
